# ifcb-inference

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: docker.yml  lint.yml  tests.yml
src/ifcb_infer/: add_embedding_output.py  cli.py  convert_onnx_batchsize.py  datasets.py  datasets_torch.py  sanstorch.py  withtorch.py
tests/: test_infer_functions.py
