[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifcb-infer"
version = "0.1.1"
description = "ONNX model inference on IFCB bins"
requires-python = ">=3.10"
dependencies = [
    "onnx",
    "ifcbkit @ git+https://github.com/WHOIGit/ifcbkit.git",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime",
]
cuda = [
    "onnxruntime-gpu[cuda,cudnn]",
]
torch = [
    "torch",
    "torchvision",
    "humanize",
]
dev = [
    "pytest~=8.3.4",
    "pytest-mock~=3.14.0",
    "pytest-cov~=4.0.0",
    "black~=25.1.0",
    "isort~=6.0.1",
    "flake8~=7.3.0",
]

[project.scripts]
ifcb-infer = "ifcb_infer.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ifcb_infer"]
